# wechat-remind

./: .env.example  .gitignore  README.md  setup.cfg
prompts/: custom.md
scripts/: install_ubuntu.sh
tests/: test_bot.py  test_config.py  test_ilink_client.py  test_llm.py  test_llm_direct.py  test_store.py
wechat_remind/: __init__.py  bot.py  cli.py  config.py  ilink_client.py  llm.py  store.py
