[metadata]
name = wechat-remind
version = 0.1.0
description = Local single-owner WeChat reminder bot using the Weixin iLink bot API.

[options]
packages = find:
python_requires = >=3.9
install_requires =

[options.extras_require]
dev =
    pytest>=7.1

[options.entry_points]
console_scripts =
    wechat-remind = wechat_remind.cli:main
